<resources>
    <string name="app_name">Marvel Movies</string>
    <string name="heroes_name">Nama Pahlawan</string>
    <string name="description">Deskripsi</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="pemeranfilm">Pemeran</string>
    <string name="namapemeranfilm">Pemeran</string>
    <string name="tanggalrilis">Tanggal Rilis</string>
    <string name="inputtanggal">Tanggal Rilis</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="logout">Logout</string>
    <string name="share">Share</string>
    <string name="email">mhdhilalhmdy15@gmail.com</string>
    <string name="namaprofile">M Hilal Alhamdy</string>
    <string name="about">About Page</string>
    <string-array name="data_name">
        <item>Avengers: Endgame</item>
        <item>Doctor Strange</item>
        <item>Thor</item>
        <item>Captain America: Civil War</item>
        <item>Captain Marvel</item>
        <item>Wanda Vision</item>
        <item>Loki</item>
        <item>Black Widow</item>
        <item>Spider Man: Home Coming</item>
        <item>Black Panther: Wakanda Forever</item>
    </string-array>
    <string-array name="data_description">
        <item>Di dalam film ini, para superhero Marvel Cinematic Universe atau MCU berkumpul untuk mengakhiri perang dengan Thanos, yang mana proses tersebut sangat menguras tenaga dan emosi. Ada harga yang sangat mahal yang harus dibayarkan, mulai dari pertumpahan darah sampai nyawa melayang. Semua itu dilakukan demi bisa mengalahkan Thanos dan juga pasukannya. Di film ini, Anda akan dimanjakan dengan berbagai macam adegan yang luar biasa dari para anggota Avengers. Selain itu, jalan cerita yang ada di dalam film ini juga sulit ditebak, jadi akan membuat siapa saja yang menontonnya tidak mau mengalihkan pandangan dari layar kaca. </item>
        <item>Film Doctor Strange dapat menjadi pilihan yang tepat untuk Anda yang ingin mencoba menjelajahi dunia supranatural MCU yang misterius. Melalui film Marvel yang satu ini, Anda akan menyaksikan perjuangan Doctor Strange dalam mengatasi berbagai macam kesulitan dengan menggunakan kekuatan magisnya. Makhluk mistis, ritual terlarang, kekuatan gelap, dan hal-hal lainnya yang berlawanan dengan logika akan dihadapi oleh Doctor Strange. Jadi, pastikan bahwa Anda tidak akan melewatkan kisah menarik dan berbagai perjuangan Doctor Strange di filmnya ini.</item>
        <item>Siapa sih yang tidak tahu dengan karakter superhero Marvel yang bernama Thor ini? Dia merupakan salah satu superhero Marvel yang cukup populer. Thor merupakan dewa yang sangat kuat dan seorang prajurit yang angkuh. Film yang dirilis pada tahun 2011 ini mengisahkan tentang seorang anak Dewa Odin. Ia menyalakan kembali perang kuno yang ada di tempat tinggalnya, Asgard, karena perbuatannya yang sangat sembrono. Oleh karena itu, Thor harus menanggung semua akibatnya dan Odin mengusirnya masuk ke Bumi.</item>
        <item>Coba Anda bayangkan jika dua hero saling bertarung, manakah yang akan Anda dukung? Di film Marvel yang satu ini, mengisahkan tentang sebuah kejadian yang melibatkan Avengers dan akhirnya mengakibatkan tekanan politik untuk bisa membuat sistem akuntabilitas yang mengawasi Avengers. Akan tetapi tidak disangka-sangka, adanya perbedaan pendapat antara Captain America yaitu Steve Rogers dan Tony Stark tentang sistem tersebut membuat mereka menjadi terpecah dan mengalami perang sekutu. Kubu Steve sendiri memilih untuk mendukung kebebasan sistem, sementara kubu Tony lebih memilih untuk mendukung keputusan pemerintah.</item>
        <item>Film yang diproduksi oleh Marvel pertama kali ini menjadikan seorang perempuan sebagai tokoh protagonis utama dengan alur cerita yang mengisahkan tentang perjalanan hidup Carol Danvers sebelum akhirnya Avengers terbentuk. Dari sinilah Captain Marvel bertemu dengan Nick Fury Muda. Anda akan disuguhkan dengan berbagai kombinasi petualangan melintasi jagat raya antariksa yang dilakukan oleh Captain Marvel. Selain memiliki setting era kuno yang unik, Anda juga bisa menikmati keseruan seorang jagoan perempuan yang menghajar musuh di luar angkasa.</item>
        <item>Perlu diketahui bahwa ternyata film Marvel juga memiliki alur cerita tentang romansa sepasang kekasih. Salah satunya yaitu kisah hidup rumah tangga Vision dan juga Wanda yang seperti orang biasa. Dimana Vision bekerja di suatu perusahaan dan Wanda menjadi seorang ibu rumah tangga. Adapun salah satu aspek yang membedakan film yang satu ini dengan film MCU lainnya yaitu di setiap episodenya terkesan seperti film lawas. Hal itulah yang ingin ditonjolkan oleh Marvel. Anda juga akan disuguhkan dengan humor khas Marvel di setiap episodenya.</item>
        <item>Di dalam film ini, Anda akan menemukan jawaban dari berbagai macam pertanyaan seperti misalnya, bagaimana Loki yang penuhi dengan trik dapat tertangkap oleh sekelompok tentara? Kemudian, bagaimana kelanjutan petualangan Loki setelah kejadian di dalam film Avengers: Endgame? Film yang satu ini menjadi sebuah pintu pembahasan multiverse dan bisa menimbulkan pertanyaan lain. Setiap teori time travel di dalam film Loki ini juga dinarasikan dengan sangat menarik dan cukup baik. Sehingga, untuk Anda yang penasaran, jangan sampai melewatkan keseruan mereka ya.</item>
        <item>Film Marvel yang satu ini merupakan film pertama yang mengisahkan tentang Black Widow secara keseluruhan. Black Widow bercerita mengenai masa lalu Natasha Romanoff dan juga hubungannya dengan Red Guardian, yakni superhero asal Soviet yang mempunyai kekuatan serupa dengan Captain America. Film yang satu ini sebenarnya dijadwalkan akan dirilis di bioskop pada tahun 2020. Akan tetapi, karena adanya pandemi covid-19, film ini baru bisa dijadwalkan pada tahun 2021 kemarin. Apakah Anda sudah menonton film Marvel yang satu ini?.</item>
        <item>Kehadiran Spider-Man pertama kali dikenalkan di dalam film Civil War dan pastinya menjadi film yang paling ditunggu-tunggu oleh para penggemarnya. Film tersebut menceritakan tentang Peter Parker yang kembali pulang ke rumah bersama dengan bibinya setelah mempunyai pengalaman menyenangkan bersama dengan para Avengers. Setelah kembali ke rutinitasnya, Ia mulai diawasi oleh mentornya, yakni Tony Stark, yang mana berusaha untuk membuktikan kemampuannya. Musuh baru yang bernama Vulture juga muncul dan mengancam berbagai macam hal penting untuk Peter.</item>
        <item>Apakah Anda pernah mendengar tagline ataupun dialog “Wakanda Forever”? Ternyata, kalimat itu adalah salah satu salam yang biasa dipakai oleh masyarakat negara fiktif Wakanda di dalam film dengan judul Black Panther.
Wakanda sendiri adalah sebuah negara yang kaya raya dan dikenal sebagai penghasil vibranium ataupun logam yang paling kuat di bumi. Tapi sayangnya, negara ini terisolasi. Adapun salah satu adegan yang akan membuat para penonton takjub adalah proses pengangkatan ‘Challa menjadi seorang raja Wakanda.</item>
    </string-array>
    <integer-array name="data_photo">
        <item>@drawable/endgame</item>
        <item>@drawable/doctorstrange</item>
        <item>@drawable/thor</item>
        <item>@drawable/captainamerika</item>
        <item>@drawable/captainmarvel</item>
        <item>@drawable/wandavision</item>
        <item>@drawable/loki</item>
        <item>@drawable/blackwidow</item>
        <item>@drawable/spiderman</item>
        <item>@drawable/wakanda</item>
    </integer-array>
    <string-array name="data_date">
        <item>24 April 2019</item>
        <item>26 Oktober 2016</item>
        <item>17 April 2011</item>
        <item>27 April 2016</item>
        <item>8 Maret 2019</item>
        <item>15 Januari 2021</item>
        <item>9 Juni 2021</item>
        <item>9 Juli 2021</item>
        <item>28 Juni 2017</item>
        <item>9 November 2022</item>
    </string-array>
    <string-array name="data_actor">
        <item>Robert Downey,Chris Evans</item>
        <item>Benedict Cumberbatch</item>
        <item>Chris Hemsworth</item>
        <item>Robert Downey, Chris Evans</item>
        <item>Brie Larson, Samuel L Jackson</item>
        <item>Elizabeth Olsen, Paul Bettany</item>
        <item>Tom Hiddleston, Jonathan Majors</item>
        <item>Natasha Romanoff</item>
        <item>Tom Holland, Zendaya</item>
        <item>Letitia Wright, Tenoch Huerta</item>
    </string-array>


</resources>