<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailHero">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <ImageView
                    android:id="@+id/tv_detail_photo"
                    android:transitionName="image"
                    android:layout_width="200dp"
                    android:layout_height="280dp"
                    android:layout_centerInParent="true"
                    android:gravity="center_vertical"
                    android:scaleType="centerCrop"
                    tools:src="@tools:sample/avatars" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tv_detail_name"
                android:transitionName="name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="@string/heroes_name" />

            <TextView
                android:id="@+id/tanggal_rilis"
                android:transitionName="tanggal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tanggalrilis"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/input_taggal_rilis"
                android:transitionName="tanggalRilis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inputtanggal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="16dp"
                android:textSize="20sp"
                 />

            <TextView
                android:id="@+id/tittleaktor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pemeranfilm"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nama_actor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/namapemeranfilm"
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/deskripsi_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deskripsi"
                android:layout_marginTop="15dp"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_detail_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="20sp"
                tools:text="@string/description" />

            <Button
                android:id="@+id/action_share"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="@string/share" />

        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>