<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="20dp"
    tools:context=".AboutPage">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="206dp"
                android:layout_height="206dp"
                android:layout_centerInParent="true"
                android:layout_marginBottom="30dp"
                android:src="@drawable/hilalprofile" />

        </RelativeLayout>

        <TextView
            android:id="@+id/namaprofile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/namaprofile"
            android:textSize="24sp"
            android:layout_marginBottom="30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/emailprofile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/email"
            android:textSize="20sp"
            android:layout_marginBottom="30dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonlogout"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/logout" />


        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>